2007-04-29  Johan Dahlin  <jdahlin@async.com.br>

	* README: 
	* configure.ac:
	* gobject/Makefile.am:
	* gobject/ffi-marshaller.c: (g_value_to_ffi_type),
	(g_value_from_ffi_type), (g_cclosure_marshal_generic_ffi):
	* gobject/ffi-marshaller.h:
	* gobject/gobjectmodule.c: (create_signal), (init_gobject):
	* pygobject-2.0.pc.in:
	* tests/test_signal.py:
	* tests/testhelpermodule.c: (test1_callback),
	(test1_callback_swapped), (test2_callback), (test3_callback),
	(test4_callback), (test_float_callback), (test_double_callback),
	(test_string_callback), (test_object_callback), (connectcallbacks),
	(_wrap_connectcallbacks), (inittesthelper):

	Add a generic CClosure marshaller based on ffi. 
	This makes it possible to connect to signals on PyGObjects from C.
	libffi is now an optional dependency
	Fixes #353816 (Edward Hervey)

2007-04-23  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* configure.ac: Post-release version bump.

=== 2.13.0 ===
2007-04-23  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* configure.ac: Bump version to 2.13.0.

	* tests/test_properties.py (TestProperties.testMulti): Unit test
	for get/set_properties.

2007-04-23  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gobject/pygobject.c: Implemented pygobject_set_properties and
	pygobject_get_properties in order to set multiple properties using
	keyword arguments. Fixes 403212
	
	* docs/reference/pygobject.xml: Docs for the above new methods.

2007-04-14  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c, gobject/pygobject.h: Add a new
	pyg_gerror_exception_check API.  Fixes #425242.

	* gobject/gobjectmodule.c (pyg_set_application_name) 
	(pyg_set_prgname): Add wrappers for g_set_application_name and
	g_set_prgname.  Patch by Havoc Pennington.  Fixes #415853.

	* gobject/pygobject.h: Bug #419379: Modernize init_pygobject: use
	static inline functions instead of macros.

	* gobject/gobjectmodule.c (init_gobject):
	* gobject/pygobject-private.h: