@@ -1,0 +1,17 @@
+Name: PyGObject
+Description: Python bindings for GObject
+Requires: gobject-2.0
+Version: @VERSION@
+Libs: @FFI_LIBS@
+Cflags: -I${pc_top_builddir}/${pcfiledir}/gobject
+
+# you can use the --variable=pygtkincludedir argument to
+# pkg-config to get this value.  You might want to use this to
+# install additional headers.
+pygtkincludedir=${pc_top_builddir}/${pcfiledir}/gobject
+
+# same here.  Useful when calling the code generator in addon packages.
+defsdir=${pc_top_builddir}/${pcfiledir}/.
+fixxref=${pc_top_builddir}/pygobject-@VERSION@/docs/xsl/fixxref.py
+codegendir=${pc_top_builddir}/${pcfiledir}/gobject/codegen
+pygdocs=${pc_top_builddir}/pygobject-@VERSION@/docs
